Fixed navbar scrollbar display

--- a/assets/css/header-style.css
+++ b/assets/css/header-style.css
@@ -28,6 +28,7 @@ body {
     display: flex;
     justify-content: space-between;
 
+    min-width: 1300px;
     width: 80vw;
     height: 10vh;
 
@@ -35,7 +36,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    padding: 0 10vw;
+    margin: auto;
 
     overflow-y: hidden;
     background-color: white;
